[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["day1"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Clayton Egan-Wyer"]

[workspace.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
